# Rift.Runtime.Logging

./: CMakeLists.txt  module.json
private/Engine/Runtime/: Logger.cpp
public/Engine/Runtime/: Logger.hpp
